# solid-state_kinetics

./: .gitignore  .pre-commit-config.yaml  .pyproject.toml.swp  Export_test.json  LICENSE  README.md  experiment_sub_bar.py  main.py  pyproject.toml  test.txt
.github/workflows/: commit.yml  pre-commit.yml  release.yml  test.yml
docs/: math.ipynb
docs/ru/: 0_ssk.ipynb  r_0.csv  r_1.csv  r_2.csv
gui/: main_window.py  plot_canvas.py
resources/: DSC_NH4Cl_refined_10.0K_min.csv  DSC_NH4Cl_refined_3.0K_min.csv  DSC_NH4Cl_refined_5.0K_min.csv  Export_test.json  NH4_parse_TGA.csv  NH4_rate_10.csv  NH4_rate_10_3_rcts_ads_ads_ads.json  NH4_rate_3.csv  NH4_rate_3_3_rcts_fr_ads_ads.json  NH4_rate_5.csv  NH4_rate_5_3_rcts_ads_ads_ads.json  export_test.json  Данные ТГА.csv
src/: file_data.py  logger_config.py  pandas_model.py  script.py
src/core/: app_settings.py  base_signals.py  basic_signals.py  calculation.py  calculation_data.py  calculation_data_operations.py  calculation_results_strategies.py  calculation_scenarios.py  calculation_thread.py  calculations.py  calculations_data.py  calculations_data_operations.py  curve_fitting.py  file_data.py  file_operations.py  logger_config.py  logger_console.py  operation_enums.py  pandas_model.py  result_strategies.py  series_data.py
src/data_processing/: calculations.py
src/gui/: __main__.py  console_widget.py  main_window.py  plot_canvas.py
src/gui/deconvolution_tab/: deconvolution_tab.py
src/gui/main_tab/: load_file_button.py  main_tab.py  plot_canvas.py  side_bar.py  sidebar.py  sub_side_bar.py
src/gui/main_tab/PlotCanvas/: anchor_group.py  plot_canvas.py
src/gui/main_tab/plot_canvas/: anchor_group.py  plot_canvas.py
src/gui/main_tab/sub_sidebar/: deconvolution_sub_bar.py  ea_sub_bar.py  experiment_sub_bar.py  model_based_calculations.py  model_fit_sub_bar.py  series_sub_bar.py  sub_side_hub.py
src/gui/main_tab/sub_sidebar/model_based/: model_based.py  models_scheme.py
src/gui/main_tab/sub_sidebar/model_free/: deconvolution_sub_bar.py  ea_sub_bar.py  experiment_sub_bar.py  model_fit_sub_bar.py
src/gui/table_tab/: table_side_bar.py  table_tab.py  table_widget.py
tests/: test_base.py  test_logger.py
